--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@teefe/gatsby-theme-luden": "1.1.7",
     "gatsby": "^3.5.0",
+    "gatsby-plugin-manifest": "^3.5.0",
+    "gatsby-plugin-offline": "^4.5.0",
     "gatsby-plugin-preact": "^5.5.0",
+    "gatsby-plugin-react-helmet": "^4.5.0",
     "gatsby-source-filesystem": "^3.5.0",
     "preact": "^10.5.13",
     "preact-render-to-string": "^5.1.19",
